--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li><strong>Project 1:</strong> (Add a short description)</li>
-        <li><strong>Project 2:</strong> (Add a short description)</li>
-        <li><strong>Project 3:</strong> (Add a short description)</li>
+        <li><strong>Project 1:</strong> Built and deployed a portfolio site using GitHub Pages (HTML/CSS/JS)</li>
+        <li><strong>Project 2:</strong> Created an IS117 assignment page and practiced Git + Terminal workflow.</li>
+        <li><strong>Project 3:</strong> Published a personal brand site for “Mopik Automation” using GitHub Pages.</li>
       </ul>
     </section>
 
@@ -36,7 +36,7 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+      <p>Email: <a href="mailto:mm2887@njit.edu">mm2887@njit.edu</a></p>
       <p>GitHub: <a href="https://github.com/Modrilexx">github.com/Modrilexx</a></p>
     </section>
   </main>
